Add filtering with django-filter of transactions by category, year and month.
